objects/Account.object
<CustomObject>
    <fields>
        <fullName>AccountCode__c</fullName>
        <description>Used in the production of Seismic documents</description>
        <externalId>true</externalId>
        <inlineHelpText>Used in the production of Seismic documents</inlineHelpText>
        <label>Account Code</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Acct_Zone_Dif_Than_Contact__c</fullName>
        <description>No Longer Used; if Account's ADU IDU Zone is different than Primary Contact's ADU IDU zone, this is true</description>
        <formula>IF(ZoneADU_IDU__c  &lt;&gt;  PrimaryOfficeContact__r.ZoneADU_IDU__c , True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Acct Zone Dif Than Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ActiveCDRQualitativeData__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used in CDR processing; this field refers to the Contact's active CDR Qualitative Data record.  Set by Apex.</description>
        <label>Active CDR Qualitative Data</label>
        <referenceTo>CDRQualitativeData__c</referenceTo>
        <relationshipLabel>Firms</relationshipLabel>
        <relationshipName>Firms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>All_Contacts__c</fullName>
        <description>Report link that lists all contacts for the given account</description>
        <formula>HYPERLINK('/00OF0000006JP5k?pv0=' &amp; MarsAccountId__c , 'Click Here','_New')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>All Contacts</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ArtemusManualUpsert__c</fullName>
        <defaultValue>false</defaultValue>
        <description>No Longer Used; This flag can be deleted later on, only Visible to Admin. Necessary for Artemus related data uploads</description>
        <label>ArtemusManualUpsert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BPLDate__c</fullName>
        <description>No Longer Used; Date that account became part of the Blue Print List</description>
        <label>BPL Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BPL__c</fullName>
        <defaultValue>false</defaultValue>
        <description>No Longer Used; if Account is part of the Blue Print List, true; manually updated/updated via data load</description>
        <label>BPL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BillingCounty__c</fullName>
        <description>Account's billing county; low usage, target for delete</description>
        <label>County</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRDID__c</fullName>
        <description>Account's CDR ID, Data Flow: Mars -&gt; SF</description>
        <externalId>true</externalId>
        <label>CRD ID#</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <description>No Longer Used; Fiduciary Services field to indicate subchannel</description>
        <label>Channel</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BANK TRUST</fullName>
                </value>
                <value>
                    <fullName>BANK TRUST WHSE</fullName>
                </value>
                <value>
                    <fullName>DCIO</fullName>
                </value>
                <value>
                    <fullName>DCIO SUB ADV</fullName>
                </value>
                <value>
                    <fullName>DC REGIONAL</fullName>
                </value>
                <value>
                    <fullName>FID FOCUS</fullName>
                </value>
                <value>
                    <fullName>FIDUCIARY BD</fullName>
                </value>
                <value>
                    <fullName>FIDUCIARY SERVICES</fullName>
                </value>
                <value>
                    <fullName>GLOBAL RELATIONS</fullName>
                </value>
                <value>
                    <fullName>GLOBAL RELATIONS IND</fullName>
                </value>
                <value>
                    <fullName>GLOBAL RELATIONS WHSE</fullName>
                </value>
                <value>
                    <fullName>IAG IND</fullName>
                </value>
                <value>
                    <fullName>IAG RIA</fullName>
                </value>
                <value>
                    <fullName>IND ADV GRP</fullName>
                </value>
                <value>
                    <fullName>OVERLAY</fullName>
                </value>
                <value>
                    <fullName>RETIREMENT</fullName>
                </value>
                <value>
                    <fullName>RIA FIDUCIARY</fullName>
                </value>
                <value>
                    <fullName>RIA PLATFORM</fullName>
                </value>
                <value>
                    <fullName>SUB ADV</fullName>
                </value>
                <value>
                    <fullName>WIREHOUSE</fullName>
                </value>
                <value>
                    <fullName>ADU</fullName>
                </value>
                <value>
                    <fullName>IDU</fullName>
                </value>
                <value>
                    <fullName>RCDU</fullName>
                </value>
                <value>
                    <fullName>RADU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ClearingFirms__c</fullName>
        <description>Integrated from EDW</description>
        <label>Clearing Firms</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Test</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CommentsModified__c</fullName>
        <description>Updated by Apex when a user updates the Comments field (sets who modified comments).</description>
        <label>Comments Modified By</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact_s_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field to find a contact record for Institutional Account Suitability. Compliance would like a few fields to track that Sales users have had a conversation with Institutions attesting that they have had a conversation about ability to purchase.</description>
        <label>Contact's Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Contact's Name)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CurrentAUMETF__c</fullName>
        <description>Integrated on a monthly basis from the Data Warehouse.  This value displays only ETF related data and is updated on a monthly basis.  ETF data is not displayed in Sales by Product or the Big Tickets reports or the related Current AUM ETF.</description>
        <inlineHelpText>This value displays only ETF related data and is updated on a monthly basis.  ETF data is not displayed in Sales by Product or the Big Tickets reports or the related Current AUM ETF.</inlineHelpText>
        <label>Current AUM ETF</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CurrentETFAUM__c</fullName>
        <description>No Longer Uses; DELETE</description>
        <label>Current ETF AUM_OLD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CurrentMonthActivity__c</fullName>
        <description>True if the Account has had activities in the current month</description>
        <formula>if ( AND(LastCallMeetingDate__c &gt;= DATE(year(today()),month(TODAY()),1),LastCallMeetingDate__c &lt;= TODAY()),true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MTD Activities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_AUM_Formula_with_Label__c</fullName>
        <description>No Longer Used; presents current AUM in thousands, millions, or billions with YTD purchases</description>
        <formula>"Current AUM: " &amp;

SUBSTITUTE(
IF(TranCurrentAUM__c&lt; 0, "(", "") &amp; "$" &amp;
IF(ABS(TranCurrentAUM__c) &gt;= 1000000000, TEXT(FLOOR(TranCurrentAUM__c/ 1000000000)) &amp; ",", "")
&amp; IF(ABS(TranCurrentAUM__c) &gt;= 1000000, RIGHT(TEXT(FLOOR(TranCurrentAUM__c/ 1000000)), 3) &amp; ",", "")
&amp; IF(ABS(TranCurrentAUM__c) &gt;= 1000, RIGHT(TEXT(FLOOR(TranCurrentAUM__c/ 1000)), 3) &amp; ",", "")
&amp; RIGHT(TEXT(FLOOR(TranCurrentAUM__c)), 3)
&amp; RIGHT(TEXT(ROUND(TranCurrentAUM__c * 100, 0)), 0)
 &amp; IF(TranYTDPurchases__c &lt; 0, ")", "")
,"-","")</formula>
        <label>Current AUM Leveled</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custodian__c</fullName>
        <description>Integrated from EDW</description>
        <label>Custodian</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Test</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_of_the_Conversation__c</fullName>
        <description>For Institutional Account Suitability to record the date of conversation. Compliance would like a few fields to track that Sales users have had a conversation with Institutions attesting that they have had a conversation about ability to purchase.</description>
        <label>Date of the Conversation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EDWDurKey__c</fullName>
        <externalId>true</externalId>
        <label>EDW Dur Key</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ETFStrategistProspect__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked by the ETF Sales team and used on the Contact object in a formula field with the same name. This allows for filtering at the office or the contact level.</description>
        <label>ETF Strategist Prospect</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FINSearchId__c</fullName>
        <description>This field holds the FINSearch Id. This is the Plan Id for the Plans/Institutions or Consultant Id for Consultants.</description>
        <inlineHelpText>This field holds the FINSearch Id. This is the Plan Id for the Plans/Institutions or Consultant Id for Consultants.</inlineHelpText>
        <label>FINSearch Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FirmAUM__c</fullName>
        <description>Integrated from EDW</description>
        <label>Firm AUM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FirmDiscretionaryAUM__c</fullName>
        <description>Integrated from EDW</description>
        <label>Firm Discretionary AUM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FirmNondiscretionaryAUM__c</fullName>
        <description>Integrated from EDW</description>
        <label>Firm Nondiscretionary AUM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FirmOfficeD15__c</fullName>
        <description>No Longer Used; can be deleted</description>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Firm/Office ID 15</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FirmOfficeID18__c</fullName>
        <description>Case Safe 18-digit SFID of the Account</description>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Firm/Office ID 18</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FirmType__c</fullName>
        <description>MARS Firm Type picklist, Data Flow: Mars -&gt; SF</description>
        <label>Firm Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ADU BANK TRUST</fullName>
                </value>
                <value>
                    <fullName>ASSET MGR</fullName>
                </value>
                <value>
                    <fullName>BACK OFFICE</fullName>
                </value>
                <value>
                    <fullName>BANK TRUST B</fullName>
                </value>
                <value>
                    <fullName>BANK TRUST PW</fullName>
                </value>
                <value>
                    <fullName>BROKER DEALER B</fullName>
                </value>
                <value>
                    <fullName>CLEARING</fullName>
                </value>
                <value>
                    <fullName>CONSULTANT</fullName>
                </value>
                <value>
                    <fullName>DCIO</fullName>
                </value>
                <value>
                    <fullName>DC PLATFORM</fullName>
                </value>
                <value>
                    <fullName>DIRECT H</fullName>
                </value>
                <value>
                    <fullName>DIRECT L</fullName>
                </value>
                <value>
                    <fullName>DIRECT N</fullName>
                </value>
                <value>
                    <fullName>DIRECT O</fullName>
                </value>
                <value>
                    <fullName>EDJ</fullName>
                </value>
                <value>
                    <fullName>INDEPENDENT BD A</fullName>
                </value>
                <value>
                    <fullName>INDEPENDENT BD B</fullName>
                </value>
                <value>
                    <fullName>INDEPENDENT BD C</fullName>
                </value>
                <value>
                    <fullName>INSTITUTIONAL A</fullName>
                </value>
                <value>
                    <fullName>INSTITUTIONAL P</fullName>
                </value>
                <value>
                    <fullName>INSTITUTIONAL PW</fullName>
                </value>
                <value>
                    <fullName>INTNL GKA</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>OFFSHORE</fullName>
                </value>
                <value>
                    <fullName>PLAN SPONSOR</fullName>
                </value>
                <value>
                    <fullName>RCDU BANK TRUST</fullName>
                </value>
                <value>
                    <fullName>RCDU BD</fullName>
                </value>
                <value>
                    <fullName>RCDU GKA</fullName>
                </value>
                <value>
                    <fullName>RIA A</fullName>
                </value>
                <value>
                    <fullName>RIA ADU PW</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Firm_CRD__c</fullName>
        <description>Parent account's CDR ID</description>
        <formula>Parent.CRDID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Firm CRD</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Firm__c</fullName>
        <description>Displays either the name of the Firm or the Parent Firm name, depending on the type of Account</description>
        <formula>IF(ISPICKVAL(Type, 'Firm'),  Name,  
IF(ISPICKVAL(Type, 'Consultant'),  Name, 
IF(ISPICKVAL(Type, 'Affiliate'),  Name, 
Parent.Name )))</formula>
        <label>Firm</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FocusFirmADU_IDU__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Target for delete; Advisor &amp; institutional Distribution Unit Focus Firm indicator</description>
        <inlineHelpText>Advisor &amp; institutional Distribution Unit Focus Firm indicator</inlineHelpText>
        <label>Focus Firm</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FocusFirmFS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Target for delete; Focus Firm for Fiduciary Services</description>
        <label>Focus Firm FS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FocusFirmIAG__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Target for delete; focus firm for IAG</description>
        <label>Focus Firm IAG</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FocusFirmRS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Target for delete; focus firm for RS</description>
        <label>Focus Firm RS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FocusFirmWHSE__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Target for delete; focus firm for Wirehouse</description>
        <label>Focus Firm WHSE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GlobalConnectId__c</fullName>
        <description>Global Connect Salesforce ID used for integrations</description>
        <externalId>true</externalId>
        <label>Global Connect Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GovernmentEntity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag this field if the Firm is a government entity for Compliance reasons. It is used in reports for Compliance to verify that Government Entities are identified and that activity reports can be generated.</description>
        <inlineHelpText>Flag this field if the Firm is a government entity for Compliance reasons.</inlineHelpText>
        <label>Government Entity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HomeOfficeId__c</fullName>
        <description>MARS Home Office Id, Data Flow: Mars -&gt; SF</description>
        <label>Home Office Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InstitutionalPlanName__c</fullName>
        <description>Integrated from EDW</description>
        <label>Institutional Plan Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InstitutionalPlanSize__c</fullName>
        <description>Integrated from EDW</description>
        <label>Institutional Plan Size</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>InstitutionalPlanType__c</fullName>
        <description>Integrated from EDW</description>
        <label>Institutional Plan Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>529 Plan</fullName>
                </value>
                <value>
                    <fullName>Corporate D.B.</fullName>
                </value>
                <value>
                    <fullName>Corporate DC</fullName>
                </value>
                <value>
                    <fullName>Deferred Compensation</fullName>
                </value>
                <value>
                    <fullName>Endowment</fullName>
                </value>
                <value>
                    <fullName>Foundation</fullName>
                </value>
                <value>
                    <fullName>Hospital Plan</fullName>
                </value>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>Money Manager</fullName>
                </value>
                <value>
                    <fullName>Nonprofit Membership Association</fullName>
                </value>
                <value>
                    <fullName>OPEB Trust</fullName>
                </value>
                <value>
                    <fullName>Operating Fund</fullName>
                </value>
                <value>
                    <fullName>Permanent Fund</fullName>
                </value>
                <value>
                    <fullName>Public D.B.</fullName>
                </value>
                <value>
                    <fullName>Public D.C.</fullName>
                </value>
                <value>
                    <fullName>Religious Order</fullName>
                </value>
                <value>
                    <fullName>Trust Fund</fullName>
                </value>
                <value>
                    <fullName>Union/Multiemployer D.B.</fullName>
                </value>
                <value>
                    <fullName>Union/Multiemployer D.C.</fullName>
                </value>
                <value>
                    <fullName>Union/Multiemployer DB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsOnPlanWatchList__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Integrated from EDW</description>
        <label>On Firm Watch List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastCallDate__c</fullName>
        <description>Auto populated based on the Firm/Offices related Activities of type Call</description>
        <label>Last Call Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LastCallMeetingActivityDate__c</fullName>
        <description>Auto populated based on the Firm/Offices related Activities of type Meeting or Call</description>
        <inlineHelpText>Auto populated based on the Firm/Offices related Activities of type Meeting or Call</inlineHelpText>
        <label>Last Call/Meeting Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LastCallMeetingDate__c</fullName>
        <description>Formula field presenting either the Last Call or Last Meeting Date depending on which is most recent</description>
        <formula>if (isnull(LastCallDate__c),LastMeetingDate__c,
if (isnull(LastMeetingDate__c),LastCallDate__c,
If(LastCallDate__c &gt; LastMeetingDate__c, LastCallDate__c, LastMeetingDate__c)
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Call/Meeting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LastMeetingDate__c</fullName>
        <description>Auto populated based on the Firm/Offices related Activities of type Meeting</description>
        <label>Last Meeting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <description>Datetime version of standard Last Modified Date</description>
        <formula>LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastPRCGProcessDate__c</fullName>
        <description>Auto populated based on the related activity of type equal to Analytics and the Status equal to Completed</description>
        <inlineHelpText>Auto populated based on the related activity of type equal to Analytics and the Status equal to Completed</inlineHelpText>
        <label>Last PRCG Process Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LastSaleDate__c</fullName>
        <description>Integrated from EDW</description>
        <label>Last Sale Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LegalName__c</fullName>
        <description>The Legal Name from CDR Qualitative Data; set by trigger</description>
        <label>Legal Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MarsAccountId__c</fullName>
        <description>The unique Account Identifier for MARS; used in integrations, Data Flow: Mars -&gt; SF</description>
        <externalId>true</externalId>
        <label>MARS Account Id</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MarsAffiliateName__c</fullName>
        <description>Manually populated and maps to the equivalent MARS affiliate name so that Products can me associated to the Affiliate Account record</description>
        <label>MARS Affiliate Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MktOppIndustryAUM__c</fullName>
        <description>Integrated from EDW</description>
        <label>Mkt Opp Industry AUM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MktOppMarketShareAUM__c</fullName>
        <description>Integrated from EDW</description>
        <label>Mkt Opp Market Share AUM</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MktOppNatixisAUM__c</fullName>
        <description>Integrated from EDW</description>
        <label>Mkt Opp Natixis AUM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MktOppPYIndustryAUM__c</fullName>
        <description>Integrated from EDW</description>
        <label>Mkt Opp PY Industry AUM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MktOppPYIndustryNetSales__c</fullName>
        <description>Integrated from EDW</description>
        <label>Mkt Opp PY Industry Net Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MktOppPYIndustryPurchases__c</fullName>
        <description>Integrated from EDW</description>
        <label>Mkt Opp PY Industry Purchases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MktOppPYIndustryRedemptions__c</fullName>
        <description>Integrated from EDW</description>
        <label>Mkt Opp PY Industry Redemptions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MktOppPYMarketShareAUM__c</fullName>
        <description>Integrated from EDW</description>
        <label>Mkt Opp PY Market Share AUM</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MktOppPYMarketShareNetSales__c</fullName>
        <description>Integrated from EDW</description>
        <label>Mkt Opp PY Market Share Net Sales</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MktOppPYMarketSharePurchases__c</fullName>
        <description>Integrated from EDW</description>
        <label>Mkt Opp PY Market Share Purchases</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MktOppPYMarketShareRedemptions__c</fullName>
        <description>Integrated from EDW</description>
        <label>Mkt Opp PY Market Share Redemptions</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MktOppPYNatixisAUM__c</fullName>
        <description>Integrated from EDW</description>
        <label>Mkt Opp PY Natixis AUM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MktOppPYNatixisNetSales__c</fullName>
        <description>Integrated from EDW</description>
        <label>Mkt Opp PY Natixis Net Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MktOppPYNatixisRedemptions__c</fullName>
        <description>Integrated from EDW</description>
        <label>Mkt Opp PY Natixis Redemptions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MktOppPYR4QIndustryNetSales__c</fullName>
        <description>Integrated from EDW</description>
        <label>Mkt Opp PY R4Q Industry Net Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MktOppPYR4QIndustryPurchases__c</fullName>
        <description>Integrated from EDW</description>
        <label>Mkt Opp PY R4Q Industry Purchases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MktOppPYR4QIndustryRedemptions__c</fullName>
        <description>Integrated from EDW</description>
        <label>Mkt Opp PY R4Q Industry Redemptions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MktOppPYR4QMarketShareNetSales__c</fullName>
        <description>Integrated from EDW</description>
        <label>Mkt Opp PY R4Q Market Share Net Sales</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MktOppPYR4QMarketSharePurchases__c</fullName>
        <description>Integrated from EDW</description>
        <label>Mkt Opp PY R4Q Market Share Purchases</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MktOppPYR4QMarketShareRedemptions__c</fullName>
        <description>Integrated from EDW</description>
        <label>Mkt Opp PY R4Q Market Share Redemptions</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MktOppPYR4QNatixisNetSales__c</fullName>
        <description>Integrated from EDW</description>
        <label>Mkt Opp PY R4Q Natixis Net Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MktOppPYR4QNatixisPurchases__c</fullName>
        <description>Integrated from EDW</description>
        <label>Mkt Opp PY R4Q Natixis Purchases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MktOppPYR4QNatixisRedemptions__c</fullName>
        <description>Integrated from EDW</description>
        <label>Mkt Opp PY R4Q Natixis Redemptions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MktOppR4QIndustryNetSales__c</fullName>
        <description>Integrated from EDW</description>
        <label>Mkt Opp R4Q Industry Net Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MktOppR4QIndustryPurchases__c</fullName>
        <description>Integrated from EDW</description>
        <label>Mkt Opp R4Q Industry Purchases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MktOppR4QIndustryRedemptions__c</fullName>
        <description>Integrated from EDW</description>
        <label>Mkt Opp R4Q Industry Redemptions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MktOppR4QMarketShareNetSales__c</fullName>
        <description>Integrated from EDW</description>
        <label>Mkt Opp R4Q Market Share Net Sales</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MktOppR4QMarketSharePurchases__c</fullName>
        <description>Integrated from EDW</description>
        <label>Mkt Opp R4Q Market Share Purchases</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MktOppR4QMarketShareRedemptions__c</fullName>
        <description>Integrated from EDW</description>
        <label>Mkt Opp R4Q Market Share Redemptions</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MktOppR4QNatixisNetSales__c</fullName>
        <description>Integrated from EDW</description>
        <label>Mkt Opp R4Q Natixis Net Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MktOppR4QNatixisPurchases__c</fullName>
        <description>Integrated from EDW</description>
        <label>Mkt Opp R4Q Natixis Purchases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MktOppR4QNatixisRedemptions__c</fullName>
        <description>Integrated from EDW</description>
        <label>Mkt Opp R4Q Natixis Redemptions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MktOppYTDIndustryNetSales__c</fullName>
        <description>Integrated from EDW</description>
        <label>Mkt Opp YTD Industry Net Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
</CustomObject>